basic webview working

--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.65 --</small>
+SwingOSC <small>-- version 0.66-SNAPSHOT --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -196,6 +196,11 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>or put your GUI buidling process in a <code>Routine</code> and place short <code>wait</code> statements in the body until no more message dropping occurs.</LI></UL></LI>
 </UL>
 <h3>change history</h3>
+<h4>v0.66 (oct 2011 - SVN rev. ???)</h4>
+<UL>
+<LI>SC classes: added JSCWebView, updated JFont (added new methods)</LI>
+<LI>Switched from Eclipse to IntelliJ IDEA</LI>
+</UL>
 <h4>v0.65 (jul 2010 - SVN rev. 252)</h4>
 <UL>
 <LI>SC classes: JSCTextField and JSCNumberBox (added borderless_, setNormalBorder, setLineBorder), JSCMultiSlider (added steady_, precision_ - thanks to Tim Blechmann), JSCPeakMeter (added orientation_), JSCImage (added *color, setPixels, SwingGUI.image), JFont (available faces are now stored in archive, so can be accessed synchronously), Server (doWhenBooted forks functions now, fixed a problem with Model/ dependants)</LI>
